--- a/nickdima/test_pong/template/indexpong.html
+++ b/nickdima/test_pong/template/indexpong.html
@@ -28,26 +28,17 @@
 		<script src="{{url_for('test_pong.static', filename='js/ball.js')}}"></script>
 		<script src="{{url_for('test_pong.static', filename='js/sketch.js')}}"></script>
 
-		<script> 
-
-		function add_chat(mes){
-			let elm = document.getElementById('chatbox');
-			elm.innerHTML = mes['chat'] + '<br>' + elm.innerHTML;
-		}
-
-		your_sock.on('recv_chat', function(data){
-			add_chat(data);
-		});
-		
-		</script>
 
 	</head>
 
 	<body>
 		<div id="sketch-holder">
-		<button onclick="your_sock.emit('send_chat', {'chat': document.getElementById('chat').value});">Submit</button>
-		<input type="text" id="chat" name="chat">
-		<p id='chatbox'></p>
+		</div>
+		<div>
+			<button onclick="your_sock.emit('send_chat', {'chat': document.getElementById('chat').value});">Submit</button>
+			<input type="text" id="chat" name="chat">
+			<p id='chatbox'></p>
+		</div>
 		<!--<button onclick="do_increment()">Increment</button>-->
 	</body>
 </html>
