added chat area

--- a/nickdima/test_pong/template/indexpong.html
+++ b/nickdima/test_pong/template/indexpong.html
@@ -41,6 +41,11 @@
 		</script>
 		<div id="sketch-holder">
 		</div>
+
+		<hr>
+		<br>
+		<p>Chat Area</p>
+
 		<div>
 			<button onclick="submit_chat();" id="chat_button">Submit</button>
 			<input type="text" id="chat" name="chat">
