added pong section for multiplayer games

--- a/nickdima/lunchbreak/template/index.html
+++ b/nickdima/lunchbreak/template/index.html
@@ -239,10 +239,53 @@
     </div>
 </section>
 
+
 <section class="mbr-section content4 cid-r1YQEEJrw2" id="content4-s">
+    <div class="container">
+        <div class="media-container-row">
+            <div class="title col-12 col-md-8">
+                <h2 class="align-center pb-3 mbr-fonts-style display-2">
+                    Multiplayer Games</h2>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">
+                    Grab a friend!</h3>
+            </div>
+        </div>
+    </div>
+</section>
 
-    
 
+<section class="features3 cid-r1YQyfn1IN" id="features3-p">
+    <div class="container">
+        <div class="media-container-row">
+            <!--NEED ONE OF THESE FOR EVERY IN DEVELOPMENT GAME-->
+            <div class="card p-3 col-12 col-md-6">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="{{url_for('lunchbreak.static', filename='lunchbreak/assets/towerdefense_capture.png')}}" alt="towerdefense">
+                    </div>
+                    <div class="card-box">
+                        <h4 class="card-title mbr-fonts-style display-7">
+                            <a href="{{url_for('test_pong.test_pong_game')}}">Classic Pong</a>
+                        </h4>
+                        <p class="mbr-text mbr-fonts-style display-7">
+                            Paddle your way to victory!
+                        </p>
+                    </div>
+                    <div class="mbr-section-btn text-center">
+                        <a href="{{url_for('test_pong.test_pong_game')}}" class="btn btn-primary display-4">
+                            Play
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!--END NEED ONE OF THESE FOR EVERY IN DEVELOPMENT GAME-->
+        </div>
+    </div>
+</section>
+
+
+
+<section class="mbr-section content4 cid-r1YQEEJrw2" id="content4-s">
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
@@ -258,10 +301,6 @@
 </section>
 
 <section class="features3 cid-r1YQyfn1IN" id="features3-p">
-
-    
-
-    
     <div class="container">
         <div class="media-container-row">
             <!--NEED ONE OF THESE FOR EVERY IN DEVELOPMENT GAME-->
