added pong asset picture

--- a/nickdima/lunchbreak/template/index.html
+++ b/nickdima/lunchbreak/template/index.html
@@ -261,7 +261,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="{{url_for('lunchbreak.static', filename='lunchbreak/assets/towerdefense_capture.png')}}" alt="towerdefense">
+                        <img src="{{url_for('lunchbreak.static', filename='lunchbreak/assets/pong.png')}}" alt="pong">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -293,8 +293,6 @@
                     Games in developement</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">
                     Feel free to play and give feedback, but these are still in the works!</h3>
-                    <h5 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5"><a href="{{ url_for('test_pong.test_pong_game') }}">Secret games</a> </h5>
-                
             </div>
         </div>
     </div>
