--- a/nickdima/test_pong/template/indexpong.html
+++ b/nickdima/test_pong/template/indexpong.html
@@ -24,6 +24,10 @@
 			}
 
 		</script>
+	    <form action="http://www.nickdima.com/lunchbreak">
+	        <input type="submit" value="Homepage">
+	    </form>
+	    <hr>
 		<div id="sketch-holder">
 		</div>
 		<p>Chat Area</p>
