testing putting things side by side

--- a/nickdima/stay_alive/templates/stayaliveindex.html
+++ b/nickdima/stay_alive/templates/stayaliveindex.html
@@ -13,6 +13,16 @@
 				}
 			}, false);
 		</script>
+
+		<style>
+			.visual-container{
+				display: flex;
+			}
+			.game-HUD{
+				flex-grow: 1;
+			}
+		</style>
+
 	</head>
 
 	<body>
@@ -20,7 +30,17 @@
 	        <input type="submit" value="Homepage">
 	    </form>
 	    <hr>
-		<div id="sketch-holder">
+
+	    <div class="visual-container">
+			<div id="sketch-holder">
+			</div>
+			<div class="game-HUD">
+				<p> teseting that this worked</p>
+				<button>button maybe?</button>
+				<p> another test p</p>
+			</div>
 		</div>
+
+
 	</body>
 </html>
