--- a/nickdima/stay_alive/templates/stayaliveindex.html
+++ b/nickdima/stay_alive/templates/stayaliveindex.html
@@ -37,18 +37,18 @@
 			<div class="game-HUD">
 				<p id="status">Status: Outside</p>
 				<br>
-				<p>Resources</p>
+				<p>Resources -----------</p>
 				<p id="water">Water: 0</p>
 				<p id="wood">Wood: 0</p>
 				<p id="brick">Bricks: 0</p>
 				<p id="iron">Iron: 0</p>
 				<br>
-				<p>Inventory</p>
+				<p>Inventory -----------</p>
 				<p id="ammo">Ammo: 0</p>
 				<p id="gun">Gun: None,</p>
 				<p id="tool">Tool: Hands,</p>
 				<br>
-				<p>Building</p>
+				<p>Building ------------</p>
 				<div>
 					<select id="build_menu" onchange="console.log('changed');">
 					  <option value="Wall - Wood">Wall - Wood</option>
@@ -63,10 +63,10 @@
 					</select>
 				<div>
 				<br>
-				<p>Current Selection</p>
+				<p>Current Selection ----</p>
 				<p id="selection">Gun</p>
 				<br>
-				<p>Equipped</p>
+				<p>Equipped -------------</p>
 				<p id="equipped">Hands</p>
 			</div>
 		</div>
