--- a/nickdima/stay_alive/templates/stayaliveindex.html
+++ b/nickdima/stay_alive/templates/stayaliveindex.html
@@ -63,7 +63,7 @@
 					</select>
 				<div>
 				<br>
-				<p>Current Selection ----</p>
+				<p>Current Selection -----</p>
 				<p id="selection">Gun</p>
 				<br>
 				<p>Equipped -----------------</p>
