--- a/nickdima/stay_alive/templates/stayaliveindex.html
+++ b/nickdima/stay_alive/templates/stayaliveindex.html
@@ -63,6 +63,7 @@
 					</select>
 				</div>
 				<br>
+				<p>Equipped -------------- </p>
 				<div>
 					<select id="equipped_menu" onchange="console.log('changed equipped');">
 					  <option value="Hands">Hands</option>
