--- a/nickdima/stay_alive/templates/stayaliveindex.html
+++ b/nickdima/stay_alive/templates/stayaliveindex.html
@@ -41,7 +41,7 @@
 				<p id="water">Water: 0</p>
 				<p id="wood">Wood: 0</p>
 				<p id="brick">Bricks: 0</p>
-				<p id="iron">Iron: 0</p>
+				<p id="steal">Steal: 0</p>
 				<br>
 				<p>Inventory --------------</p>
 				<p id="ammo">Ammo: 0</p>
