--- a/nickdima/lunchbreak/template/index.html
+++ b/nickdima/lunchbreak/template/index.html
@@ -257,7 +257,7 @@
 <section class="features3 cid-r1YQyfn1IN" id="features3-p">
     <div class="container">
         <div class="media-container-row">
-            <!--NEED ONE OF THESE FOR EVERY IN DEVELOPMENT GAME-->
+            <!--NEED ONE OF THESE FOR EVERY IN DEVELOPMENT GAME pong-->
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
@@ -278,7 +278,27 @@
                     </div>
                 </div>
             </div>
-            <!--END NEED ONE OF THESE FOR EVERY IN DEVELOPMENT GAME-->
+            <!--END NEED ONE OF THESE FOR EVERY IN DEVELOPMENT GAME stay_alive-->
+            <div class="card p-3 col-12 col-md-6">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="{{url_for('lunchbreak.static', filename='lunchbreak/assets/stay_alive.png')}}" alt="stay alive">
+                    </div>
+                    <div class="card-box">
+                        <h4 class="card-title mbr-fonts-style display-7">
+                            <a href="{{url_for('Stay_alive.stay_alive_index')}}">Stay Alive</a>
+                        </h4>
+                        <p class="mbr-text mbr-fonts-style display-7">
+                            Collect resources and build shelter to surive with friends!
+                        </p>
+                    </div>
+                    <div class="mbr-section-btn text-center">
+                        <a href="{{url_for('Stay_alive.stay_alive_index')}}" class="btn btn-primary display-4">
+                            Play
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
