--- a/nickdima/stay_alive/templates/stayaliveindex.html
+++ b/nickdima/stay_alive/templates/stayaliveindex.html
@@ -62,6 +62,12 @@
 					  <option value="Gun - Iron">Gun - Iron</option>
 					</select>
 				</div>
+				<div>
+					<select id="rotation_menu" onchange="console.log('changed rotation');">
+					  <option value="0">0</option>
+					  <option value="90">90</option>
+					</select>
+				</div>
 				<br>
 				<p>Equipped -------------- </p>
 				<div>
