--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -74,7 +74,7 @@
 
     <div class="container align-center">
         <h2 class="pb-3 mbr-fonts-style mbr-section-title display-2">
-            {{selected_item['base']}}
+            {{selected_item['Base']}}
         </h2>
         <h3 class="pb-5 mbr-section-subtitle mbr-fonts-style mbr-light display-5">
         	Edit your selection below!
@@ -83,7 +83,7 @@
         <div class="row media-row">
           <div class="team-item col-lg-3 col-md-6">
                   <div class="item-image">
-                      <img src="{{ url_for('food.static', filename=selected_item['base']) }}" alt="" title="">
+                      <img src="{{ url_for('food.static', filename=selected_item['Img_URL']) }}" alt="" title="">
                   </div>
 
                   <div class="item-caption py-3">
