--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -83,6 +83,12 @@
         <div class="row media-row">
           <div class="team-item col-lg-3 col-md-6">
                   <div class="item-image">
+                  	<style>
+                  		img:hover{
+                  			width: 800px;
+                  			height: 800px;
+                  		}
+                  </style>
                       <img src="{{ url_for('food.static', filename=selected_item['Img_URL']) }}" alt="" title="">
                   </div>
 
