--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -83,15 +83,14 @@
         <div class="row media-row">
           <div class="team-item col-lg-3 col-md-6">
                   <div class="item-image">
-                  	<style>
-                  		img {
-                  			transition: transform 0.25s ease;
+                  	<script>
+                  		if (screen.width <= 600){
+                  			let styleNode = document.createElement('style');
+                  			styleNode.type = 'text/css'
+
+                  			styleNode.styleSheet.cssText = 'img{transition: transform 0.25s ease;} img:hover{-webkit-transform:scale(1.5); transform:scale(1.5);}'
                   		}
-                  		img:hover{
-						    -webkit-transform:scale(1.5);
-						    transform:scale(1.5);
-                  		}
-                  </style>
+                  	</script>
                       <img src="{{ url_for('food.static', filename=selected_item['Img_URL']) }}" alt="" title="">
                   </div>
 
