--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -84,7 +84,7 @@
           <div class="team-item col-lg-3 col-md-6">
                   <div class="item-image">
                   	<script>
-                  		if (screen.width <= 600){
+                  		if (screen.width >= 850){
                   			let styleNode = document.createElement('style');
                   			styleNode.type = 'text/css'
 
