--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -74,7 +74,7 @@
 
     <div class="container align-center">
         <h2 class="pb-3 mbr-fonts-style mbr-section-title display-2">
-            {{selected_item['Base']}}
+            Customization Page
         </h2>
         <h3 class="pb-5 mbr-section-subtitle mbr-fonts-style mbr-light display-5">
         	Edit your selection below!
@@ -98,7 +98,20 @@
                   <div class="item-caption py-3">
                       <div class="item-name px-2">
                           <p class="mbr-fonts-style display-5">
-                             STAND IN VALUE</p>
+                             {{selected_item['Base']}}
+                         </p>
+                      </div>
+                      <div class="item-role px-2">
+                          <p>Description: {{ selected_item['Description'] }}</p>
+                      </div>
+                      <div class="item-role px-2">
+                          {% for ingredient in selected_item['Ingredients'] %}
+                          	<p>{{ ingredient }}
+                          	{% if not loop.last %}
+                          		, 
+                          	{% endif %}
+                          	</p>
+                          {% endfor %}
                       </div>
                       <div class="item-role px-2">
                           <p>Price: {{ selected_item['Base Price'] }}</p>
