--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -122,59 +122,33 @@
     	</div>
 </div>
 
-
-<div class="container-fluid">
-    <div class="media-container-row">
-        <!--NEED ONE OF THESE FOR EVERY GAME-->
-        <div class="card p-3 col-12 col-md-6 col-lg-2">
-            <div class="card-wrapper">
-                <div class="card-img">
-                    <img src="{{ url_for('food.static', filename=selected_item['Img_URL']) }}" alt="">
-                </div>
-                <div class="card-box">
-                    <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                        <a href="/lunchbreak/snake">This is the title</a>
-                    </h4>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                        This is the description
-                    </p>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                        Onions, Noodles, Spice, Pepper, Flask, Hit, Box, Weights, Long, List, What Happens, Hi, Hello
-                    </p>
-                </div>
-            </div>
-        </div>
-      </div>
-    </div>
-
-<div class="container-fluid">
-    <div class="media-container-row">
-        <!--NEED ONE OF THESE FOR EVERY GAME-->
-        <div class="card p-3 col-12 col-md-6 col-lg-2">
-            <div class="card-wrapper">
-                <div class="card-img">
-                    <img src="{{ url_for('food.static', filename=selected_item['Img_URL']) }}" alt="">
-                </div>
-                <div class="item-name px-2">
-                    <p class="mbr-fonts-style display-5">
-                       {{selected_item['Base']}}
-                   </p>
-                </div>
-                <div class="card-box">
-                    <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                        <a href="/lunchbreak/snake">This is the title</a>
-                    </h4>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                        This is the description
-                    </p>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                        Onions, Noodles, Spice, Pepper, Flask, Hit, Box, Weights, Long, List, What Happens, Hi, Hello
-                    </p>
+<div class="container">
+        <div class="media-container-row">
+            <!--NEED ONE OF THESE FOR EVERY IN DEVELOPMENT GAME pong-->
+            <div class="card p-3 col-12 col-md-6">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="{{ url_for('food.static', filename=selected_item['Img_URL']) }}" alt="pong">
+                    </div>
+                    <div class="card-box">
+                        <h4 class="card-title mbr-fonts-style display-7">
+                            <a href="/test_pong/test_pong_game">DRUNKEN NOODLES TITLE</a>
+                        </h4>
+                        <p class="mbr-text mbr-fonts-style display-7">
+                            LONG ASS DESCRIPTION TO SEE WHAT WOUL DHAPPEN IF TLASD;JLA A;LKKJA;L AASLK;J DAJ , D, D,D D,,D,D, D, D, D, D, THIS IS THE LONG WORD, D
+                        </p>
+                    </div>
+                    <div class="mbr-section-btn text-center">
+                        <a href="/test_pong/test_pong_game" class="btn btn-primary display-4">
+                            Play
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
-      </div>
-    </div>
+</div>
+
+</div>
+
 
 </section>
 <!--END GRAY SECTION-->
