--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -121,7 +121,9 @@
           </div>
     	</div>
 </div>
+</section>
 
+<section class="features3 cid-r1YQyfn1IN" id="features3-p">
 <div class="container">
         <div class="media-container-row">
             <!--NEED ONE OF THESE FOR EVERY IN DEVELOPMENT GAME pong-->
@@ -148,7 +150,6 @@
 </div>
 
 </div>
-
 
 </section>
 <!--END GRAY SECTION-->
