--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -67,11 +67,39 @@
 
 <!--Variable on this page is a dictionary "selected_item"-->
 
+<section class="features3 cid-r1YQyfn1IN" id="features3-p">
+<div class="container">
+        <div class="media-container-row">
+            <!--NEED ONE OF THESE FOR EVERY IN DEVELOPMENT GAME pong-->
+            <div class="card p-3 col-12 col-md-6">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="{{ url_for('food.static', filename=selected_item['Img_URL']) }}" alt="pong">
+                    </div>
+                    <div class="card-box">
+                        <h4 class="card-title mbr-fonts-style display-7">
+                            <a href="/test_pong/test_pong_game">DRUNKEN NOODLES TITLE</a>
+                        </h4>
+                        <p class="mbr-text mbr-fonts-style display-7">
+                            LONG ASS DESCRIPTION TO SEE WHAT WOUL DHAPPEN IF TLASD;JLA A;LKKJA;L AASLK;J DAJ , D, D,D D,,D,D, D, D, D, D, THIS IS THE LONG WORD, D
+                        </p>
+                    </div>
+                    <div class="mbr-section-btn text-center">
+                        <a href="/test_pong/test_pong_game" class="btn btn-primary display-4">
+                            Play
+                        </a>
+                    </div>
+                </div>
+            </div>
+</div>
+
+</div>
+
+</section>
+
+
 <!--GRAY SECTION ON TOP OF PAGE-->
-<section class="engine"><a href="https://mobiri.se/o">portfolio web templates</a></section><section class="features16 cid-r0R1Wm1xUa" id="features16-i">
-
-
-
+<section class="features16 cid-r0R1Wm1xUa" id="features16-i">
     <div class="container align-center">
         <h2 class="pb-3 mbr-fonts-style mbr-section-title display-2">
             Customization Page
@@ -123,35 +151,6 @@
 </div>
 </section>
 
-<section class="features3 cid-r1YQyfn1IN" id="features3-p">
-<div class="container">
-        <div class="media-container-row">
-            <!--NEED ONE OF THESE FOR EVERY IN DEVELOPMENT GAME pong-->
-            <div class="card p-3 col-12 col-md-6">
-                <div class="card-wrapper">
-                    <div class="card-img">
-                        <img src="{{ url_for('food.static', filename=selected_item['Img_URL']) }}" alt="pong">
-                    </div>
-                    <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">
-                            <a href="/test_pong/test_pong_game">DRUNKEN NOODLES TITLE</a>
-                        </h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            LONG ASS DESCRIPTION TO SEE WHAT WOUL DHAPPEN IF TLASD;JLA A;LKKJA;L AASLK;J DAJ , D, D,D D,,D,D, D, D, D, D, THIS IS THE LONG WORD, D
-                        </p>
-                    </div>
-                    <div class="mbr-section-btn text-center">
-                        <a href="/test_pong/test_pong_game" class="btn btn-primary display-4">
-                            Play
-                        </a>
-                    </div>
-                </div>
-            </div>
-</div>
-
-</div>
-
-</section>
 <!--END GRAY SECTION-->
 
 
