--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -153,6 +153,55 @@
 
 <!--END GRAY SECTION-->
 
+<section class="features3 cid-r1YQyfn1IN" id="features3-p">
+    <div class="container">
+        <div class="media-container-row">
+            <!--NEED ONE OF THESE FOR EVERY IN DEVELOPMENT GAME pong-->
+            <div class="card p-3 col-12 col-md-6">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="/lunchbreak/static/lunchbreak/assets/pong.png" alt="pong">
+                    </div>
+                    <div class="card-box">
+                        <h4 class="card-title mbr-fonts-style display-7">
+                            <a href="/test_pong/test_pong_game">Classic Pong</a>
+                        </h4>
+                        <p class="mbr-text mbr-fonts-style display-7">
+                            Paddle your way to victory!
+                        </p>
+                    </div>
+                    <div class="mbr-section-btn text-center">
+                        <a href="/test_pong/test_pong_game" class="btn btn-primary display-4">
+                            Play
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!--END NEED ONE OF THESE FOR EVERY IN DEVELOPMENT GAME stay_alive-->
+            <div class="card p-3 col-12 col-md-6">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="/lunchbreak/static/lunchbreak/assets/stay_alive.png" alt="stay alive">
+                    </div>
+                    <div class="card-box">
+                        <h4 class="card-title mbr-fonts-style display-7">
+                            <a href="/stay_alive/">Stay Alive</a>
+                        </h4>
+                        <p class="mbr-text mbr-fonts-style display-7">
+                            Collect resources and build shelter to surive with friends!
+                        </p>
+                    </div>
+                    <div class="mbr-section-btn text-center">
+                        <a href="/stay_alive/" class="btn btn-primary display-4">
+                            Play
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 <!--White section on bottom of page with buttons-->
 <section class="mbr-section form3 cid-r0R3r9oDVn" id="form3-j">
