--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -121,7 +121,7 @@
     	</div>
 </div>
 
-<div class="container">
+<div class="container align-center">
         <div class="media-container-row">
             <!--NEED ONE OF THESE FOR EVERY IN DEVELOPMENT GAME pong-->
             <div class="card p-3 col-12 col-md-6">
@@ -130,9 +130,11 @@
                         <img src="{{ url_for('food.static', filename=selected_item['Img_URL']) }}" alt="pong">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">
-                            <a href="/test_pong/test_pong_game">DRUNKEN NOODLES TITLE</a>
-                        </h4>
+                      <div class="item-name px-2">
+                          <p class="mbr-fonts-style display-5">
+                             {{selected_item['Base']}}
+                         </p>
+                      </div>
                         <p class="mbr-text mbr-fonts-style display-7">
                             LONG ASS DESCRIPTION TO SEE WHAT WOUL DHAPPEN IF TLASD;JLA A;LKKJA;L AASLK;J DAJ , D, D,D D,,D,D, D, D, D, D, THIS IS THE LONG WORD, D
                         </p>
@@ -144,7 +146,7 @@
                     </div>
                 </div>
             </div>
-</div>
+        </div>
 
 </div>
 </section>
