--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -135,6 +135,17 @@
                              {{selected_item['Base']}}
                          </p>
                       </div>
+                      <div class="item-role px-2">
+                          <p>Description: {{ selected_item['Description'] }}</p>
+                      </div>
+                      <div class="item-role px-2">
+                          <p class="mbr-fonts-style display-5">
+                          {% for ingredient in selected_item['Ingredients'] %}
+                            {{ ingredient }}
+                            {% if not loop.last %}, {% endif %}
+                          {% endfor %}
+                          </p>
+                      </div>
                         <p class="mbr-text mbr-fonts-style display-7">
                             LONG ASS DESCRIPTION TO SEE WHAT WOUL DHAPPEN IF TLASD;JLA A;LKKJA;L AASLK;J DAJ , D, D,D D,,D,D, D, D, D, D, THIS IS THE LONG WORD, D
                         </p>
