--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -70,56 +70,16 @@
 
 
 <!--GRAY SECTION ON TOP OF PAGE-->
-<section class="features16 cid-r0R1Wm1xUa" id="features16-i">
-    <div class="container align-center">
-        <h2 class="pb-3 mbr-fonts-style mbr-section-title display-2">
-            Customization Page
-        </h2>
-        <h3 class="pb-5 mbr-section-subtitle mbr-fonts-style mbr-light display-5">
-        	Edit your selection below!
-        </h3>
 
-        <div class="row media-row">
-          <div class="team-item col-lg-3 col-md-6">
-                  <div class="item-image">
-                  	<style>
-                  		img {
-                  			transition: transform 0.25s ease;
-                  		}
-                  		img:hover{
-						    -webkit-transform:scale(2);
-						    transform:scale(2);
-                  		}
-                  </style>
-                      <img src="{{ url_for('food.static', filename=selected_item['Img_URL']) }}" alt="" title="">
-                  </div>
-
-                  <div class="item-caption py-3">
-                      <div class="item-name px-2">
-                          <p class="mbr-fonts-style display-5">
-                             {{selected_item['Base']}}
-                         </p>
-                      </div>
-                      <div class="item-role px-2">
-                          <p>Description: {{ selected_item['Description'] }}</p>
-                      </div>
-                      <div class="item-role px-2">
-                          {% for ingredient in selected_item['Ingredients'] %}
-                          	<p>{{ ingredient }}
-                          	{% if not loop.last %}
-                          		, 
-                          	{% endif %}
-                          	</p>
-                          {% endfor %}
-                      </div>
-                      <div class="item-role px-2">
-                          <p>Price: {{ selected_item['Base Price'] }}</p>
-                      </div>
-
-                  </div>
-          </div>
-    	</div>
-</div>
+<style>
+  img {
+    transition: transform 0.25s ease;
+  }
+  img:hover{
+    -webkit-transform:scale(2);
+    transform:scale(2);
+  }
+</style>
 
 <div class="container align-center">
         <div class="media-container-row">
@@ -141,10 +101,12 @@
                       <div class="item-role px-2">
                           <p class="mbr-text mbr-fonts-style display-7">
                           {% for ingredient in selected_item['Ingredients'] %}
-                            {{ ingredient }}
-                            {% if not loop.last %},{% endif %}
+                            {{ingredient}}{% if not loop.last %},{% endif %}
                           {% endfor %}
                           </p>
+                      </div>
+                      <div class="item-role px-2">
+                          <p>Price: {{ selected_item['Base Price'] }}</p>
                       </div>
                     </div>
                     <div class="mbr-section-btn text-center">
