--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -90,7 +90,7 @@
         </h3>
 
         <div class="row media-row">
-          
+
               <div class="container align-center">
             <div class="media-container-row">
                 <!--NEED ONE OF THESE FOR EVERY IN DEVELOPMENT GAME pong-->
@@ -101,22 +101,22 @@
                         </div>
                         <div class="card-box">
                           <div class="item-name px-2">
-                              <p class="mbr-fonts-style display-5">
+                              <p class="mbr-fonts-style display-3">
                                  {{selected_item['Base']}}
                              </p>
                           </div>
                           <div class="item-role px-2">
-                              <p>Description: {{ selected_item['Description'] }}</p>
+                              <p class="mbr-fonts-style display-5">Description: {{ selected_item['Description'] }}</p>
                           </div>
                           <div class="item-role px-2">
-                              <p class="mbr-text mbr-fonts-style display-7">
+                              <p class="mbr-text mbr-fonts-style display-5">
                               {% for ingredient in selected_item['Ingredients'] %}
                                 {{ingredient}}{% if not loop.last %},{% endif %}
                               {% endfor %}
                               </p>
                           </div>
                           <div class="item-role px-2">
-                              <p>Price: {{ selected_item['Base Price'] }}</p>
+                              <p class="mbr-fonts-style display-5">Price: {{ selected_item['Base Price'] }}</p>
                           </div>
                         </div>
                         <div class="mbr-section-btn text-center">
@@ -133,10 +133,6 @@
 
     	</div>
 </div>
-
-
-
-
 <!--END GRAY SECTION-->
 
 
