--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -72,18 +72,17 @@
             <ul buttons="0">
               <!--Need 1 of these for each button-->
               <li class="mbr-gallery-filter-all"><a class="btn btn-md btn-primary-outline active display-7" href="">All</a></li>
-              <li><a class="btn btn-md btn-primary-outline display-7" href="">Test Cocks</a></li>
             </ul>
 
           </div>
           <!-- Gallery -->
           <div class="mbr-gallery-row">
-            <div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Main Dish">
+            <div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Main Dish"> <!--Main Dish-->
             
             <div href="#lb-gallery2-d" data-slide-to="0" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/pad-thai1-940x528-800x449.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Pad Thai</span>
             </div></div>
 
-            <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Appetizer"><div href="#lb-gallery2-d" data-slide-to="1" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/calamari2-896x504-800x450.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Calamari</span></div></div>
+            <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="HITESTPENIS"><div href="#lb-gallery2-d" data-slide-to="1" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/calamari2-896x504-800x450.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Calamari</span></div></div> <!--Appetizer-->
 
             <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Curries"><div href="#lb-gallery2-d" data-slide-to="2" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/yellow-curry1-725x483-725x483.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Yellow Curry</span></div></div>
 
