--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -25,7 +25,7 @@
 
 <body>
 <!--NAVIGATION BAR-->
-{% include 'template.nav.html' %}
+{% include 'nav.html' %}
 <!--END NAVIGATION BAR-->
 
 <!--Variable on this page is a dictionary "selected_item"-->
