--- a/nickdima/silk_thai/template/nav.html
+++ b/nickdima/silk_thai/template/nav.html
@@ -25,8 +25,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="{{ url_for('homepage.about') }}">
-                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
-                        About Us
+                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn">About Us</span>
                     </a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="{{ url_for('checkout.summary') }}"><span class="mbri-cart-full mbr-iconfont mbr-iconfont-btn"></span>&nbsp;Order</a></div>
