fixed nav bar across site

--- a/nickdima/silk_thai/template/homepage/about.html
+++ b/nickdima/silk_thai/template/homepage/about.html
@@ -3,6 +3,10 @@
 <head>
 </head>
 <body>
+<!--Navigation bar-->
+{% include 'nav.html' %}
+<!--End navigation bar-->
+
 	<img src="https://i.imgflip.com/2g44kd.jpg" title="About us">
 </body>
 </html>
