--- a/nickdima/silk_thai/template/homepage/feedback_form.html
+++ b/nickdima/silk_thai/template/homepage/feedback_form.html
@@ -22,44 +22,9 @@
 
 </head>
 <body>
-  <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-f">
-
-
-
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </button>
-        <div class="menu-logo">
-            <div class="navbar-brand">
-                <span class="navbar-logo">
-                    <a href="{{ url_for('homepage.home') }}">
-                         <img src="{{ url_for('homepage.static', filename='assets/images/logo2.png') }}" alt="Mobirise" style="height: 3.8rem;">
-                    </a>
-                </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="{{ url_for('homepage.home') }}">Thai Charlottesville</a></span>
-            </div>
-        </div>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="{{ url_for('menu.menu') }}">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn">&nbsp;Menu</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="{{ url_for('homepage.about') }}">
-                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
-                        About Us
-                    </a>
-                </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="{{ url_for('checkout.summary') }}"><span class="mbri-cart-full mbr-iconfont mbr-iconfont-btn"></span>&nbsp;Order</a></div>
-        </div>
-    </nav>
-</section>
+<!--Navigation bar-->
+{% include 'nav.html' %}
+<!--End navigation bar-->
 
 <section class="engine"><a href="https://mobiri.se/o">portfolio web templates</a></section><section class="mbr-section form1 cid-r0R0kgQIUg" id="form1-g">
 
