--- a/nickdima/silk_thai/template/nav.html
+++ b/nickdima/silk_thai/template/nav.html
@@ -12,7 +12,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="{{ url_for('homepage.home') }}">
-                         <img src="{{ url_for('menu.static', filename='assets/images/logo2.png') }}" alt="Mobirise" style="height: 3.8rem;">
+                         <img src="{{ url_for('homepage.static', filename='assets/images/silk_thai_transparent.png') }}" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="{{ url_for('homepage.home') }}">Thai Charlottesville</a></span>
