--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -24,9 +24,9 @@
 </head>
 
 <body>
-<!--NAVIGATION BAR-->
+<!--Navigation bar-->
 {% include 'nav.html' %}
-<!--END NAVIGATION BAR-->
+<!--End navigation bar-->
 
 <!--Variable on this page is a dictionary "selected_item"-->
 
