--- a/nickdima/silk_thai/template/homepage/home.html
+++ b/nickdima/silk_thai/template/homepage/home.html
@@ -2,11 +2,7 @@
 <html >
 <head>
   <!-- Site made with Mobirise Website Builder v4.8.1, https://mobirise.com -->
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="generator" content="Mobirise v4.8.1, mobirise.com">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="{{ url_for('homepage.static', filename='assets/images/logo2.png') }}" type="image/x-icon">
+  {% include universal.html %}
   <meta name="description" content="">
   <title>Home</title>
   <link rel="stylesheet" href="{{ url_for('homepage.static', filename='assets/web/assets/mobirise-icons/mobirise-icons.css' ) }}">
